fixed speed and alignment of ship on loading page

--- a/WorkFlo_Draft_File_StructureCorrect/app/workFlo/layout/assets/styles/layout.css
+++ b/WorkFlo_Draft_File_StructureCorrect/app/workFlo/layout/assets/styles/layout.css
@@ -142,7 +142,7 @@ border-radius: 2px;
  
     z-index: 2;
     float: right;
-    width: 55%;
+    width: 50%;
     margin-bottom: 0;
     
 }
